fix: Inputs Names on mobile

--- a/src/components/ReposPage/repos.css
+++ b/src/components/ReposPage/repos.css
@@ -41,7 +41,3 @@
 .commits-container {
   margin-top: 2em;
 }
-
-.input::placeholder {
-  font-size: 0.85em;
-}
